--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,6 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "django>=5.2.9",
+    "psycopg2-binary>=2.9.11",
+    "python-dotenv>=1.2.1",
 ]
